# mini-infer

./: README.md  dune-project  mini_infer.opam
.github/workflows/: main.yml
_build/: .db  .digest-db  log
_build/default/: META.mini_infer  mini_infer.dune-package  mini_infer.install
_build/default/lib/: analysis.ml  lexer.ml  lexer.mll  mini_infer.cma  mini_infer.cmxa  mini_infer.cmxs  mini_infer.ml-gen  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/lib/.merlin-conf/: lib-mini_infer
_build/default/lib/.mini_infer.objs/: mini_infer__Analysis.impl.d  mini_infer__Lexer.impl.all-deps  parser__mock.impl.all-deps
_build/default/lib/.mini_infer.objs/byte/: mini_infer.cmi  mini_infer.cmo  mini_infer.cmt  mini_infer__Analysis.cmi  mini_infer__Analysis.cmo  mini_infer__Analysis.cmt  mini_infer__Ast.cmi  mini_infer__Ast.cmo  mini_infer__Ast.cmt  mini_infer__Lexer.cmi  mini_infer__Lexer.cmo  mini_infer__Lexer.cmt  mini_infer__Parser.cmi  mini_infer__Parser.cmo  mini_infer__Parser.cmt  mini_infer__Parser.cmti
_build/default/lib/.mini_infer.objs/native/: mini_infer.cmx  mini_infer__Analysis.cmx  mini_infer__Ast.cmx  mini_infer__Lexer.cmx  mini_infer__Parser.cmx
_build/install/default/lib/mini_infer/: META  analysis.ml  dune-package  mini_infer.cma  mini_infer.cmi  mini_infer.cmt  mini_infer.cmx  mini_infer.cmxa  mini_infer.cmxs  mini_infer.ml  mini_infer__Analysis.cmi  mini_infer__Analysis.cmt  mini_infer__Analysis.cmx  mini_infer__Ast.cmi  mini_infer__Ast.cmt  mini_infer__Ast.cmx  opam  (+7 more)
lib/: ast.ml  dune
